--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-   "name": "backend",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "type": "module",
-   "scripts": {
-      "dev": "nodemon /src/index.js"
-   },
-   "author": "",
-   "license": "ISC",
-   "dependencies": {
-      "express": "^4.18.2",
-      "mongoose": "^8.0.3"
-   },
-   "devDependencies": {
-      "nodemon": "^3.0.2",
-      "prettier": "^3.1.1"
-   }
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.js",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon /src/index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
+  }
 }
